--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,16 +14,37 @@ body {
   color: #000;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
 }
 
 body a {
   text-decoration: none;
 }
 
-.menu {
+body div,
+body dl,
+body dt,
+body dd,
+body ul,
+body ol,
+body li,
+body h1,
+body h2,
+body h3,
+body h4,
+body h5,
+body h6,
+body pre,
+body form,
+body p,
+body blockquote,
+body th,
+body td {
   margin: 0;
   padding: 0;
-  list-style-type: none;
+}
+
+.horizontal-align {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -32,11 +53,21 @@ body a {
           justify-content: flex-end;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
+}
+
+.no-bullets {
+  list-style-type: none;
+}
+
+.menu {
+  margin: 0;
+  padding: 0;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  line-height: 2.25;
   background-color: #e6e6e6;
 }
 
@@ -46,11 +77,15 @@ body a {
 }
 
 .menu li .dot {
-  height: 7px;
-  width: 7px;
+  height: 0.3rem;
+  width: 0.3rem;
   border-radius: 50%;
   display: inline-block;
   padding: 0 !important;
+}
+
+.menu li a:hover {
+  color: #00af3f !important;
 }
 
 .menu li .black {
@@ -63,14 +98,303 @@ body a {
 }
 
 .menu li .globeLogo {
-  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Globe_icon.svg/1024px-Globe_icon.svg.png") no-repeat 0 0;
+  background-image: url("../assets/globe.png") no-repeat 0 0;
   padding: 0 0 0 21px;
   display: inline-block;
   height: 17px;
 }
 
+.menu li .searchLogo {
+  padding: 0 0 0 21px;
+  display: inline-block;
+  height: 17px;
+  cursor: pointer;
+}
+
 .text-black {
-  font-size: 0.75rem !important;
+  font-size: 0.85rem !important;
   color: #000 !important;
+}
+
+.logo {
+  max-width: 220px !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  border: 0;
+  border-style: none;
+  display: inline-block;
+  vertical-align: middle;
+  max-width: 100%;
+  height: auto;
+}
+
+.down-pointer {
+  height: 1rem;
+  width: 1rem;
+}
+
+ul .nav-items {
+  padding: 1rem;
+  padding-right: 2rem;
+  color: #000;
+  font-weight: normal;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+ul .nav-items:hover {
+  color: white;
+  background-color: #0033a0;
+}
+
+ul .nav-items::after {
+  content: "\25BD";
+  color: #00b140;
+  font-size: 1rem;
+  font-weight: 600;
+  border-color: transparent;
+  margin-left: 1rem;
+  top: 23%;
+  right: 1.15rem;
+  cursor: pointer;
+}
+
+ul .toggleBtn {
+  color: #00af3f;
+  display: none;
+  margin-right: 1rem;
+}
+
+/****************************SECTION-1*************************************************/
+.section1 p {
+  margin-bottom: 1rem;
+  font-size: inherit;
+  line-height: 1.3;
+  text-rendering: optimizeLegibility;
+  display: block;
+  -webkit-margin-before: 1em;
+          margin-block-start: 1em;
+  -webkit-margin-after: 1em;
+          margin-block-end: 1em;
+  -webkit-margin-start: 0px;
+          margin-inline-start: 0px;
+  -webkit-margin-end: 0px;
+          margin-inline-end: 0px;
+}
+
+/*************************padding and margin and other common styles*****************************/
+.large-6 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50%;
+          flex: 0 0 50%;
+}
+
+.row {
+  max-width: 100%;
+  margin-left: 2%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+}
+
+.column,
+.columns {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 0px;
+          flex: 1 1 0;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
+  min-width: initial;
+}
+
+.pd-1 {
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
+}
+
+.pd-2 {
+  padding-top: 2rem !important;
+  padding-bottom: 2rem !important;
+}
+
+.wd-100 {
+  width: 100%;
+}
+
+.align-left {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.jc-spaceBetween {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.disp-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.jc-spaceBetween {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.no-pd {
+  padding: 0;
+  margin: 0;
+}
+
+.flex-dir-column {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.z1 {
+  z-index: 1;
+}
+
+.text-blue {
+  color: #0033a0 !important;
+}
+
+.h2 {
+  font-size: 63px;
+  line-height: 1.1;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+p {
+  font-size: 20px;
+}
+
+.button {
+  border: 1px solid #00b140;
+  color: #00b140;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  vertical-align: middle;
+  margin: 0 0.5rem 1rem 0;
+  padding: 0.85em 1em;
+  border: 1px solid #00b140;
+  border-radius: 0;
+  -webkit-transition: background-color 0.25s ease-out, color 0.25s ease-out;
+  transition: background-color 0.25s ease-out, color 0.25s ease-out;
+  line-height: 1;
+  text-align: center;
+  cursor: pointer;
+  font-weight: bold;
+  z-index: 999;
+}
+
+.button:hover {
+  background-color: transparent;
+  color: #078335;
+}
+
+.small {
+  font-size: 0.75rem !important;
+}
+
+/*************************MEDIA QUERIES*****************************/
+@media screen and (min-width: 1024px) {
+  h2,
+  .h2 {
+    font-size: calc(22.2px + 3.98437vw) !important;
+    width: 8em;
+  }
+  .section1-p {
+    width: 44rem;
+    font-size: calc(13.6px + 0.625vw) !important;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .header,
+  .hide-at-tabView {
+    display: none;
+  }
+  .toggleBtn {
+    display: block !important;
+    padding: 5px 5px;
+    border: 0;
+    margin: 0;
+    width: 2.2rem;
+    height: 2rem;
+    cursor: pointer;
+    -webkit-transition-duration: 2.5s;
+            transition-duration: 2.5s;
+  }
+  h2,
+  .h2 {
+    font-size: calc(22.2px + 3.98437vw) !important;
+  }
+  p {
+    font-size: calc(13.6px + 0.625vw) !important;
+  }
+  .button.small {
+    font-size: calc(12.8px + 0.3125vw) !important;
+  }
+}
+
+@media print, screen and (min-width: 64em) {
+  .large-8 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 66.66667%;
+            flex: 0 0 66.66667%;
+    max-width: 66.66667%;
+  }
+  .large-4 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 33.33333%;
+            flex: 0 0 33.33333%;
+    max-width: 33.33333%;
+  }
+  .large-6 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
+
+@media print, screen and (min-width: 40em) {
+  .column,
+  .columns {
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+  }
+  .medium-pl3 {
+    padding-left: 3rem !important;
+  }
+  .medium-10 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 83.33333%;
+            flex: 0 0 83.33333%;
+    max-width: 83.33333%;
+  }
+  h2,
+  .h2 {
+    font-size: 3.15rem;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
