--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,9 +3,11 @@ $greyColor: #e6e6e6;
 $ctsBlueColor: #0033a0;
 $arrowColor: #34c167;
 $greenTextColor: #00af3f;
+$buttonGreen: #00b140;
+$buttonHoverGreen: #078335;
 $backgroundColor: #fff;
 $textBlack: #000 !important;
-$smallFont: 0.75rem !important;
+$smallFont: 0.85rem !important;
 //importing component scss's
 //Main Scss
 *::after,
@@ -22,31 +24,64 @@ body {
     color: #000;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow: hidden;
     a {
         text-decoration: none;
     }
+    div,
+    dl,
+    dt,
+    dd,
+    ul,
+    ol,
+    li,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    pre,
+    form,
+    p,
+    blockquote,
+    th,
+    td {
+        margin: 0;
+        padding: 0;
+    }
 }
-.menu {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
+.horizontal-align {
     display: flex;
     justify-content: flex-end;
     flex-wrap: nowrap;
+}
+.no-bullets {
+    list-style-type: none;
+}
+
+.menu {
+    margin: 0;
+    padding: 0;
+    flex-wrap: nowrap;
     align-items: center;
     width: 100%;
-    line-height: 2.25;
+    // line-height: 2.25;
     background-color: $greyColor;
-
     li {
         display: inline-block;
         padding: 9px;
         .dot {
-            height: 7px;
-            width: 7px;
+            height: 0.3rem;
+            width: 0.3rem;
             border-radius: 50%;
             display: inline-block;
             padding: 0 !important;
+        }
+        a {
+            &:hover {
+                color: $greenTextColor !important;
+            }
         }
         .black {
             background-color: #000;
@@ -56,14 +91,246 @@ body {
             height: 5%;
         }
         .globeLogo {
-            background-image: url("../../assets/globe.png") no-repeat 0 0;
+            background-image: url("../assets/globe.png") no-repeat 0 0;
             padding: 0 0 0 21px;
             display: inline-block;
             height: 17px;
+        }
+        .searchLogo {
+            padding: 0 0 0 21px;
+            display: inline-block;
+            height: 17px;
+            cursor: pointer;
         }
     }
 }
 .text-black {
     font-size: $smallFont;
     color: $textBlack;
+}
+
+//**************************************NAVBAR*****************************************//
+.logo {
+    max-width: 220px !important;
+    display: flex;
+    width: 100%;
+    border: 0;
+    border-style: none;
+    display: inline-block;
+    vertical-align: middle;
+    max-width: 100%;
+    height: auto;
+}
+.down-pointer {
+    height: 1rem;
+    width: 1rem;
+}
+ul {
+    .nav-items {
+        padding: 1rem;
+        padding-right: 2rem;
+        color: #000;
+        font-weight: normal;
+        cursor: pointer;
+        transition: 0.3s;
+        &:hover {
+            color: white;
+            background-color: $ctsBlueColor;
+        }
+        &::after {
+            content: "\25BD";
+            color: #00b140;
+            font-size: 1rem;
+            font-weight: 600;
+            border-color: transparent;
+            margin-left: 1rem;
+            top: 23%;
+            right: 1.15rem;
+            cursor: pointer;
+        }
+    }
+    .toggleBtn {
+        color: $greenTextColor;
+        display: none;
+        margin-right: 1rem;
+    }
+}
+/****************************SECTION-1*************************************************/
+.section1 {
+    p {
+        margin-bottom: 1rem;
+        font-size: inherit;
+        line-height: 1.3;
+        text-rendering: optimizeLegibility;
+        display: block;
+        margin-block-start: 1em;
+        margin-block-end: 1em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+    }
+}
+
+/*************************padding and margin and other common styles*****************************/
+.large-6 {
+    flex: 0 0 50%;
+}
+.row {
+    // max-width: 60rem;
+    // margin-right: auto;
+    max-width: 100%;
+    margin-left: 2%;
+    display: flex;
+    flex-flow: row wrap;
+}
+.column,
+.columns {
+    flex: 1 1 0;
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+    min-width: initial;
+}
+.pd-1 {
+    padding-top: 1rem !important;
+    padding-bottom: 1rem !important;
+}
+.pd-2 {
+    padding-top: 2rem !important;
+    padding-bottom: 2rem !important;
+}
+
+.wd-100 {
+    width: 100%;
+}
+
+.align-left {
+    justify-content: flex-start;
+}
+
+.jc-spaceBetween {
+    justify-content: space-between;
+}
+.disp-flex {
+    display: flex;
+}
+.jc-spaceBetween {
+    justify-content: space-between;
+}
+.no-pd {
+    padding: 0;
+    margin: 0;
+}
+
+.flex-dir-column {
+    flex-direction: column;
+}
+
+.z1 {
+    z-index: 1;
+}
+.text-blue {
+    color: #0033a0 !important;
+}
+.h2 {
+    font-size: 63px;
+    line-height: 1.1;
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+
+p {
+    font-size: 20px;
+}
+.button {
+    border: 1px solid $buttonGreen;
+    color: $buttonGreen;
+    display: inline-flex;
+    align-items: center;
+    vertical-align: middle;
+    margin: 0 0.5rem 1rem 0;
+    padding: 0.85em 1em;
+    border: 1px solid #00b140;
+    border-radius: 0;
+    transition: background-color 0.25s ease-out, color 0.25s ease-out;
+    line-height: 1;
+    text-align: center;
+    cursor: pointer;
+    font-weight: bold;
+    z-index: 999;
+    &:hover {
+        background-color: transparent;
+        color: $buttonHoverGreen;
+    }
+}
+.small {
+    font-size: 0.75rem !important;
+}
+/*************************MEDIA QUERIES*****************************/
+@media screen and (min-width: 1024px) {
+    h2,
+    .h2 {
+        font-size: calc(22.2px + 3.98437vw) !important;
+        width: 8em;
+    }
+    .section1-p {
+        width: 44rem;
+        font-size: calc(13.6px + 0.625vw) !important;
+    }
+}
+@media screen and (max-width: 1024px) {
+    .header,
+    .hide-at-tabView {
+        display: none;
+    }
+    .toggleBtn {
+        display: block !important;
+        padding: 5px 5px;
+        border: 0;
+        margin: 0;
+        width: 2.2rem;
+        height: 2rem;
+        cursor: pointer;
+        transition-duration: 2.5s;
+    }
+    h2,
+    .h2 {
+        font-size: calc(22.2px + 3.98437vw) !important;
+    }
+    p {
+        font-size: calc(13.6px + 0.625vw) !important;
+    }
+    .button.small {
+        font-size: calc(12.8px + 0.3125vw) !important;
+    }
+}
+@media print, screen and (min-width: 64em) {
+    .large-8 {
+        flex: 0 0 66.66667%;
+        max-width: 66.66667%;
+    }
+    .large-4 {
+        flex: 0 0 33.33333%;
+        max-width: 33.33333%;
+    }
+    .large-6 {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+}
+@media print, screen and (min-width: 40em) {
+    .column,
+    .columns {
+        padding-right: 0.5rem;
+        padding-left: 0.5rem;
+    }
+    .medium-pl3 {
+        padding-left: 3rem !important;
+    }
+    .medium-10 {
+        flex: 0 0 83.33333%;
+        max-width: 83.33333%;
+    }
+    h2,
+    .h2 {
+        font-size: 3.15rem;
+    }
 }
