--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,21 +44,6 @@ body td {
   padding: 0;
 }
 
-.horizontal-align {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-}
-
-.no-bullets {
-  list-style-type: none;
-}
-
 .menu {
   margin: 0;
   padding: 0;
@@ -169,9 +154,34 @@ ul .toggleBtn {
 }
 
 /****************************SECTION-1*************************************************/
-.section1 p {
+.dummycarousel {
+  height: auto;
+  width: 100% !important;
+  margin-top: -3rem;
+}
+
+.dummycarousel::before {
+  content: "\25C1";
+  color: #00af3f;
+  position: relative;
+  top: 7em;
+  font-weight: 900;
+  font-size: xxx-large;
+  margin: 0.5em !important;
+}
+
+.dummycarousel .section1 {
+  background-image: -webkit-gradient(linear, right top, left top, color-stop(0, rgba(245, 246, 252, 0)), color-stop(35%, rgba(217, 219, 228, 0.774)), color-stop(50%, rgba(255, 255, 255, 0.863)), to(white)), url("../assets/imgo.jpg");
+  background-image: linear-gradient(to left, rgba(245, 246, 252, 0) 0, rgba(217, 219, 228, 0.774) 35%, rgba(255, 255, 255, 0.863) 50%, white 100%), url("../assets/imgo.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.dummycarousel p {
   margin-bottom: 1rem;
-  font-size: inherit;
+  width: auto;
+  font-size: calc(13.6px + 0.625vw) !important;
   line-height: 1.3;
   text-rendering: optimizeLegibility;
   display: block;
@@ -185,7 +195,7 @@ ul .toggleBtn {
           margin-inline-end: 0px;
 }
 
-.section1 a.button {
+.dummycarousel a.button {
   border: 1px solid #00b140;
   color: #00b140;
   display: -webkit-inline-box;
@@ -209,9 +219,31 @@ ul .toggleBtn {
   font-size: 1rem;
 }
 
-.section1 a.button:hover {
+.dummycarousel a.button:hover {
   background-color: transparent;
   color: #078335;
+}
+
+.dummycarousel .carousel-progress {
+  font-size: inherit;
+}
+
+.dummycarousel .carousel-progress li {
+  margin: 1rem;
+}
+
+.dummycarousel .carousel-progress li *button {
+  border: none;
+  height: 0.5em !important;
+  width: 2.5em !important;
+}
+
+.dummycarousel .carousel-progress li *button.active {
+  background-color: #00b140;
+}
+
+.dummycarousel .carousel-progress li *button.not-active {
+  background-color: #078335;
 }
 
 /*************************padding and margin and other common styles*****************************/
@@ -263,6 +295,27 @@ ul .toggleBtn {
           justify-content: flex-start;
 }
 
+.align-middle {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.horizontal-align {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+.no-bullets {
+  list-style-type: none;
+}
+
 .jc-spaceBetween {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -309,7 +362,7 @@ ul .toggleBtn {
 }
 
 p {
-  font-size: 20px;
+  font-size: calc(13.6px + 0.625vw);
 }
 
 /*************************MEDIA QUERIES*****************************/
@@ -321,7 +374,6 @@ p {
   }
   .section1-p {
     width: 44rem;
-    font-size: calc(13.6px + 0.625vw) !important;
   }
 }
 
@@ -351,9 +403,17 @@ p {
   .button.small {
     font-size: calc(12.8px + 0.3125vw) !important;
   }
+  .section1-p {
+    width: 44rem;
+    font-size: calc(13.6px + 0.625vw) !important;
+  }
 }
 
 @media print, screen and (min-width: 64em) {
+  h2,
+  .h2 {
+    font-size: calc(22.2px + 3.98437vw) !important;
+  }
   .large-8 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 66.66667%;
@@ -372,9 +432,17 @@ p {
             flex: 0 0 50%;
     max-width: 50%;
   }
+  .section1-p {
+    width: 44rem;
+    font-size: calc(13.6px + 0.625vw) !important;
+  }
 }
 
 @media print, screen and (min-width: 40em) {
+  h2,
+  .h2 {
+    font-size: calc(22.2px + 3.98437vw) !important;
+  }
   .column,
   .columns {
     padding-right: 0.5rem;
@@ -392,6 +460,26 @@ p {
   h2,
   .h2 {
     font-size: 3.15rem;
+  }
+  .section1-p {
+    width: auto;
+    font-size: calc(13.6px + 0.625vw) !important;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .dummycarousel::before {
+    content: "\25C1";
+    color: #00af3f;
+    position: relative;
+    top: 9em;
+    font-weight: 900;
+    font-size: xx-large;
+    margin: 0 !important;
+  }
+  .section1-p {
+    width: auto;
+    font-size: calc(13.6px + 0.625vw) !important;
   }
 }
 /*# sourceMappingURL=styles.css.map */
