--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -15,6 +15,8 @@ $smallFont: 0.85rem !important;
     box-sizing: inherit;
 }
 body {
+    // height: auto !important;
+    // width: 100% !important;
     margin: 0;
     padding: 0;
     background: $backgroundColor;
@@ -50,14 +52,6 @@ body {
         margin: 0;
         padding: 0;
     }
-}
-.horizontal-align {
-    display: flex;
-    justify-content: flex-end;
-    flex-wrap: nowrap;
-}
-.no-bullets {
-    list-style-type: none;
 }
 
 .menu {
@@ -156,10 +150,36 @@ ul {
     }
 }
 /****************************SECTION-1*************************************************/
-.section1 {
+.dummycarousel {
+    height: auto;
+    width: 100% !important;
+    margin-top: -3rem;
+    &::before {
+        content: "\25C1";
+        color: $greenTextColor;
+        position: relative;
+        top: 7em;
+        font-weight: 900;
+        font-size: xxx-large;
+        margin: 0.5em !important;
+    }
+    .section1 {
+        background-image: linear-gradient(
+                to left,
+                rgba(245, 246, 252, 0) 0,
+                rgba(217, 219, 228, 0.774) 35%,
+                rgba(255, 255, 255, 0.863) 50%,
+                rgb(255, 255, 255) 100%
+            ),
+            url("../assets/imgo.jpg");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
     p {
         margin-bottom: 1rem;
-        font-size: inherit;
+        width: auto;
+        font-size: calc(13.6px + 0.625vw) !important;
         line-height: 1.3;
         text-rendering: optimizeLegibility;
         display: block;
@@ -168,7 +188,7 @@ ul {
         margin-inline-start: 0px;
         margin-inline-end: 0px;
     }
-    a{
+    a {
         &.button {
             border: 1px solid $buttonGreen;
             color: $buttonGreen;
@@ -189,6 +209,23 @@ ul {
             &:hover {
                 background-color: transparent;
                 color: $buttonHoverGreen;
+            }
+        }
+    }
+    .carousel-progress {
+        font-size: inherit;
+        li {
+            margin: 1rem;
+            *button {
+                border: none;
+                height: 0.5em !important;
+                width: 2.5em !important;
+                &.active {
+                    background-color: $buttonGreen;
+                }
+                &.not-active {
+                    background-color: $buttonHoverGreen;
+                }
             }
         }
     }
@@ -229,6 +266,18 @@ ul {
 .align-left {
     justify-content: flex-start;
 }
+.align-middle {
+    // justify-content: center;
+    align-items: center;
+}
+.horizontal-align {
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: nowrap;
+}
+.no-bullets {
+    list-style-type: none;
+}
 
 .jc-spaceBetween {
     justify-content: space-between;
@@ -262,7 +311,7 @@ ul {
 }
 
 p {
-    font-size: 20px;
+    font-size: calc(13.6px + 0.625vw);
 }
 // .small {
 //     font-size: 0.75rem !important;
@@ -276,7 +325,6 @@ p {
     }
     .section1-p {
         width: 44rem;
-        font-size: calc(13.6px + 0.625vw) !important;
     }
 }
 @media screen and (max-width: 1024px) {
@@ -304,8 +352,16 @@ p {
     .button.small {
         font-size: calc(12.8px + 0.3125vw) !important;
     }
+    .section1-p {
+        width: 44rem;
+        font-size: calc(13.6px + 0.625vw) !important;
+    }
 }
 @media print, screen and (min-width: 64em) {
+    h2,
+    .h2 {
+        font-size: calc(22.2px + 3.98437vw) !important;
+    }
     .large-8 {
         flex: 0 0 66.66667%;
         max-width: 66.66667%;
@@ -318,8 +374,16 @@ p {
         flex: 0 0 50%;
         max-width: 50%;
     }
+    .section1-p {
+        width: 44rem;
+        font-size: calc(13.6px + 0.625vw) !important;
+    }
 }
 @media print, screen and (min-width: 40em) {
+    h2,
+    .h2 {
+        font-size: calc(22.2px + 3.98437vw) !important;
+    }
     .column,
     .columns {
         padding-right: 0.5rem;
@@ -335,5 +399,27 @@ p {
     h2,
     .h2 {
         font-size: 3.15rem;
+    }
+    .section1-p {
+        width: auto;
+        font-size: calc(13.6px + 0.625vw) !important;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .dummycarousel {
+        &::before {
+            content: "\25C1";
+            color: $greenTextColor;
+            position: relative;
+            top: 9em;
+            font-weight: 900;
+            font-size: xx-large;
+            margin: 0 !important;
+        }
+    }
+    .section1-p {
+        width: auto;
+        font-size: calc(13.6px + 0.625vw) !important;
     }
 }
