--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,7 @@ body {
   color: #000;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body a {
@@ -101,6 +101,15 @@ body td {
   color: #000 !important;
 }
 
+.navBar {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: #fff;
+  width: 100%;
+  z-index: 999;
+}
+
 .logo {
   max-width: 220px !important;
   display: -webkit-box;
@@ -157,7 +166,7 @@ ul .toggleBtn {
 .dummycarousel {
   height: auto;
   width: 100% !important;
-  margin-top: -3rem;
+  margin-top: -4rem;
 }
 
 .dummycarousel::before {
@@ -168,6 +177,7 @@ ul .toggleBtn {
   font-weight: 900;
   font-size: xxx-large;
   margin: 0.5em !important;
+  z-index: 0;
 }
 
 .dummycarousel .section1 {
@@ -195,7 +205,38 @@ ul .toggleBtn {
           margin-inline-end: 0px;
 }
 
-.dummycarousel a.button {
+.dummycarousel .carousel-progress {
+  position: relative;
+  font-size: inherit;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  top: -55px;
+}
+
+.dummycarousel .carousel-progress li {
+  margin: 1rem;
+}
+
+.dummycarousel .carousel-progress li button {
+  border: none;
+  cursor: pointer;
+  height: 0.5em !important;
+  width: 2.5em !important;
+}
+
+.dummycarousel .carousel-progress li button.active {
+  background-color: #00b140;
+}
+
+.dummycarousel .carousel-progress li button.not-active {
+  background-color: #918e8e;
+}
+
+a.button {
   border: 1px solid #00b140;
   color: #00b140;
   display: -webkit-inline-box;
@@ -219,34 +260,102 @@ ul .toggleBtn {
   font-size: 1rem;
 }
 
-.dummycarousel a.button:hover {
+a.button:hover {
   background-color: transparent;
   color: #078335;
 }
 
-.dummycarousel .carousel-progress {
-  font-size: inherit;
+a.button::after {
+  content: '\25B7';
+  margin-left: 1rem;
+  font-size: 1.8rem;
 }
 
-.dummycarousel .carousel-progress li {
-  margin: 1rem;
+/*************************SECTION2*****************************/
+.section-2 {
+  height: 100%;
+  width: 100%;
+  margin-left: 1%;
 }
 
-.dummycarousel .carousel-progress li *button {
-  border: none;
-  height: 0.5em !important;
-  width: 2.5em !important;
+.section-2 a:hover {
+  background-color: #078335 !important;
 }
 
-.dummycarousel .carousel-progress li *button.active {
-  background-color: #00b140;
+.section-2 a::after {
+  content: '\25B7';
+  margin-left: 1rem;
+  font-size: 1.8rem;
 }
 
-.dummycarousel .carousel-progress li *button.not-active {
-  background-color: #078335;
+.section-2 .column-block {
+  margin-bottom: 1rem;
+}
+
+.section-2.container {
+  position: relative;
+  height: auto;
+  width: 100%;
+}
+
+.section-2 .imgBox {
+  max-width: 100%;
+}
+
+.section-2 .imgBox img {
+  height: 18.4rem;
+  width: 16.6rem;
 }
 
 /*************************padding and margin and other common styles*****************************/
+.flex-wrap {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.flex-row-1 {
+  height: auto;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 50%;
+}
+
+.label {
+  display: inline-block !important;
+  padding: 0.4rem 0.5rem !important;
+  border-radius: 0 !important;
+  font-size: 1rem !important;
+  line-height: 1 !important;
+  white-space: nowrap !important;
+  cursor: default !important;
+  background: #0033a0 !important;
+  color: #fff !important;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.bold {
+  font-weight: bold !important;
+}
+
+.mb-half {
+  margin-bottom: 0.5rem;
+}
+
+.collapse {
+  margin-right: 0;
+  margin-left: 0;
+}
+
 .large-6 {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 50%;
@@ -263,6 +372,14 @@ ul .toggleBtn {
   -webkit-box-direction: normal;
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
+}
+
+.relative {
+  position: relative !important;
+}
+
+.announcements {
+  position: relative !important;
 }
 
 .column,
@@ -285,8 +402,25 @@ ul .toggleBtn {
   padding-bottom: 2rem !important;
 }
 
+.ovpd-2 {
+  padding: 2rem !important;
+}
+
+.ovpd-1 {
+  padding: 1rem !important;
+}
+
+.pd-small {
+  padding: 1px;
+}
+
 .wd-100 {
   width: 100%;
+}
+
+.fill-green {
+  background-color: #00b140;
+  color: white !important;
 }
 
 .align-left {
@@ -346,6 +480,13 @@ ul .toggleBtn {
           flex-direction: column;
 }
 
+.flex-dir-row {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
 .z1 {
   z-index: 1;
 }
@@ -361,8 +502,48 @@ ul .toggleBtn {
   margin-bottom: 1rem;
 }
 
+.h5 {
+  font-size: 1.8rem !important;
+  line-height: 1.2 !important;
+  margin-top: 0 !important;
+  margin-bottom: 1rem !important;
+  color: #0033a0;
+  font-weight: bold;
+}
+
+.bd-1 {
+  border: 1px solid #ccc !important;
+}
+
 p {
   font-size: calc(13.6px + 0.625vw);
+}
+
+.small-order-1 {
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+}
+
+.small-order-2 {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+}
+
+.small-12 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
+  max-width: 100%;
+}
+
+.medium-absolute {
+  position: absolute !important;
+}
+
+.medium-p1 {
+  padding: 1rem !important;
 }
 
 /*************************MEDIA QUERIES*****************************/
@@ -373,7 +554,7 @@ p {
     width: 8em;
   }
   .section1-p {
-    width: 44rem;
+    width: 46rem;
   }
 }
 
@@ -439,6 +620,19 @@ p {
 }
 
 @media print, screen and (min-width: 40em) {
+  .medium-p1 {
+    padding: 1rem !important;
+  }
+  .medium-order-2 {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .medium-order-1 {
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
+    order: 1;
+  }
   h2,
   .h2 {
     font-size: calc(22.2px + 3.98437vw) !important;
@@ -465,6 +659,31 @@ p {
     width: auto;
     font-size: calc(13.6px + 0.625vw) !important;
   }
+  .column-block {
+    margin-bottom: 1.5rem;
+  }
+  .row .row {
+    margin-right: -0.5rem;
+    margin-left: -0.5rem;
+  }
+  .column-block > :last-child {
+    margin-bottom: 0;
+  }
+  .medium-4 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 33.33333%;
+            flex: 0 0 33.33333%;
+    max-width: 33.33333%;
+  }
+  .medium-8 {
+    -webkit-box-flex: 0 !important;
+        -ms-flex: 0 0 66.66667% !important;
+            flex: 0 0 66.66667% !important;
+    max-width: 66.66667% !important;
+  }
+  .medium-absolute {
+    position: absolute !important;
+  }
 }
 
 @media screen and (max-width: 640px) {
@@ -480,6 +699,19 @@ p {
   .section1-p {
     width: auto;
     font-size: calc(13.6px + 0.625vw) !important;
+  }
+  .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .imgBox {
+    width: 100% !important;
+  }
+  .imgBox img {
+    width: 100% !important;
+    height: 100% !important;
   }
 }
 /*# sourceMappingURL=styles.css.map */
