--- a/styles/styles.css
+++ b/styles/styles.css
@@ -409,15 +409,6 @@ a.button::after {
   height: 10.875rem;
 }
 
-.section-8 .newsHead5 {
-  font-size: 27px;
-  font-weight: bold;
-  line-height: 1.2;
-  margin-top: 0;
-  margin-bottom: 1rem;
-  color: #00af3f !important;
-}
-
 /************************************************** SECTION-8 ********************************************************/
 .section-9 {
   height: auto;
@@ -445,7 +436,111 @@ a.button::after {
   font-size: calc(13.6px + 0.625vw) !important;
 }
 
+/************************************************** SECTION-10 ********************************************************/
+.section-10 {
+  height: auto;
+  min-width: 0;
+}
+
+.section-10 h3 {
+  font-size: calc(13.6px + 2.625vw) !important;
+}
+
+.section-10 .contact-logo {
+  width: 88%;
+  margin-left: 3.6%;
+}
+
+.section-10 .contact-logo .fab:hover,
+.section-10 .contact-logo .far:hover {
+  -webkit-transition: color 0.25s ease-out;
+  transition: color 0.25s ease-out;
+  color: #00af3f !important;
+}
+
+.section-10 .contact-logo .fa-twitter {
+  margin-right: 2rem;
+}
+
+.section-10 .single-img-section-10 {
+  width: 21.3rem;
+  max-width: 21.3rem;
+  min-width: 15rem;
+  min-height: 21.9rem;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.section-10 .single-img-section-10 .newsHead5 {
+  margin-bottom: -1.4rem !important;
+}
+
+.section-10 .single-img-section-10:nth-child(1) {
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(245, 246, 252, 0)), color-stop(25%, rgba(217, 219, 228, 0.815)), color-stop(28%, #d9dbe4), color-stop(50%, white), to(white)), url("../assets/img1.jpg");
+  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0) 0, rgba(217, 219, 228, 0.815) 25%, #d9dbe4 28%, white 50%, white 100%), url("../assets/img1.jpg");
+}
+
+.section-10 .single-img-section-10:nth-child(2) {
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(245, 246, 252, 0)), color-stop(15%, rgba(217, 219, 228, 0.815)), color-stop(28%, #d9dbe4), color-stop(50%, white), to(white)), url("../assets/img2.jpg");
+  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0) 0, rgba(217, 219, 228, 0.815) 15%, #d9dbe4 28%, white 50%, white 100%), url("../assets/img2.jpg");
+}
+
+.section-10 .single-img-section-10:nth-child(3) {
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(245, 246, 252, 0)), color-stop(15%, rgba(217, 219, 228, 0.815)), color-stop(28%, #d9dbe4), color-stop(50%, white), to(white)), url("../assets/img3.jpg");
+  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0) 0, rgba(217, 219, 228, 0.815) 15%, #d9dbe4 28%, white 50%, white 100%), url("../assets/img3.jpg");
+}
+
+.section-10 .single-img-section-10:nth-child(4) {
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(245, 246, 252, 0)), color-stop(15%, rgba(217, 219, 228, 0.815)), color-stop(28%, #d9dbe4), color-stop(50%, white), to(white)), url("../assets/img4.jpg");
+  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0) 0, rgba(217, 219, 228, 0.815) 15%, #d9dbe4 28%, white 50%, white 100%), url("../assets/img4.jpg");
+}
+
+.section-10 .single-img-section-10:nth-child(5) {
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(245, 246, 252, 0)), color-stop(15%, rgba(217, 219, 228, 0.815)), color-stop(28%, #d9dbe4), color-stop(50%, white), to(white)), url("../assets/img5.jpg");
+  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0) 0, rgba(217, 219, 228, 0.815) 15%, #d9dbe4 28%, white 50%, white 100%), url("../assets/img5.jpg");
+}
+
+.section-10 .single-img-section-10:nth-child(6) {
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(245, 246, 252, 0)), color-stop(15%, rgba(217, 219, 228, 0.815)), color-stop(28%, #d9dbe4), color-stop(50%, white), to(white)), url("../assets/img6.jpg");
+  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0) 0, rgba(217, 219, 228, 0.815) 15%, #d9dbe4 28%, white 50%, white 100%), url("../assets/img6.jpg");
+}
+
+.section-10 .single-img-section-10 img {
+  width: 100%;
+  height: 100%;
+}
+
 /*************************padding and margin and other common styles*****************************/
+.hr {
+  width: 88%;
+}
+
+.newsHead5 {
+  font-size: 27px;
+  font-weight: bold;
+  line-height: 1.2;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  color: #00af3f !important;
+}
+
+.overlay-white {
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(255, 255, 255, 0)), color-stop(50%, rgba(255, 255, 255, 0)), to(white));
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 0) 50%, white 100%);
+  display: block;
+  background-size: cover;
+  height: 75%;
+  width: 100%;
+  content: "";
+  bottom: -3px;
+}
+
+.carousel {
+  overflow: hidden;
+  height: 5rem;
+}
+
 .green-hover:hover {
   background-color: #078335 !important;
 }
@@ -502,6 +597,10 @@ a.button::after {
   margin-bottom: 2rem;
 }
 
+.mb-large {
+  margin-bottom: 6rem;
+}
+
 .collapse {
   margin-right: 0;
   margin-left: 0;
@@ -527,6 +626,10 @@ a.button::after {
 
 .relative {
   position: relative !important;
+}
+
+.z-0 {
+  z-index: 0 !important;
 }
 
 .announcements {
@@ -567,7 +670,7 @@ a.button::after {
 }
 
 .pd-small {
-  padding: 1px;
+  padding: 2%;
 }
 
 .wd-100 {
@@ -723,6 +826,10 @@ p {
   margin-left: 1%;
 }
 
+.m-1 {
+  margin: 0.7rem;
+}
+
 .small {
   font-size: 0.75rem !important;
 }
@@ -735,6 +842,22 @@ p {
   margin-bottom: 0rem;
   width: 17.87rem;
   height: 2rem;
+}
+
+.custom-label {
+  margin-top: 5%;
+  width: 36%;
+  font-size: calc(13px + 0.2vw) !important;
+}
+
+.fab {
+  margin-left: 5%;
+}
+
+.far,
+.fab {
+  cursor: pointer;
+  color: #999 !important;
 }
 
 /*************************MEDIA QUERIES*****************************/
@@ -960,6 +1083,47 @@ p {
   }
   .section-7 .content .label {
     margin-top: 0 !important;
+  }
+}
+
+@media screen and (max-width: 1124px) {
+  .single-img-section-10 {
+    width: 20.3rem !important;
+  }
+}
+
+@media screen and (max-width: 1076px) {
+  .single-img-section-10 {
+    width: 19.3rem !important;
+  }
+}
+
+@media screen and (max-width: 1026px) {
+  .single-img-section-10 {
+    width: 18.3rem !important;
+  }
+}
+
+@media screen and (max-width: 979px) {
+  .single-img-section-10 {
+    width: 17.3rem !important;
+  }
+}
+
+@media screen and (max-width: 930px) {
+  .single-img-section-10 {
+    width: 16.3rem !important;
+  }
+}
+
+@media screen and (max-width: 882px) {
+  .single-img-section-10 {
+    width: 21.3rem !important;
+  }
+  .imgArea {
+    -webkit-box-pack: space-evenly !important;
+        -ms-flex-pack: space-evenly !important;
+            justify-content: space-evenly !important;
   }
 }
 /*# sourceMappingURL=styles.css.map */
